--- a/cafegilas.html
+++ b/cafegilas.html
@@ -72,9 +72,8 @@
 
 <img src="./images/chef-1.jpg" alt="" >
 
-<h1>emtehani
+
   
-</h1>
 
     </div>
 
@@ -87,7 +86,36 @@
 
 
   </section>
+  <section class="instagram">
+  <h2 class="instagram--page">
+    
+    <i class="fa-brands fa-instagram"></i>
+   
+  </h2>
+  <h2 class="instagram--name">cafe.gilas</h2>
+</section>
+<sectin class="foods">
 
+<img src="./images/main/1.jpg" alt="" class="food--img">
+<img src="./images/main/2.jpg" alt="" class="food--img">
+<img src="./images/main/3.jpg" alt="" class="food--img">
+<img src="./images/main/4.jpg" alt="" class="food--img">
+<img src="./images/main/5.jpg" alt="" class="food--img">
+<img src="./images/main/6.jpg" alt="" class="food--img">
+<img src="./images/main/7.jpg" alt="" class="food--img">
+<img src="./images/main/8.jpg" alt="" class="food--img">
+<img src="./images/main/9.jpg" alt="" class="food--img">
+
+
+
+
+
+
+
+
+
+
+</sectin>
 
 </body>
 
