add footer and about us

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>cafe gilas</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="./fontawesome-free-6.6.0-web/css/all.css">
+  <link rel="stylesheet" href="mobile.css">
 </head>
 
 <body>
@@ -18,9 +19,11 @@
   <header>
     <nav>
       <ul class="header--ul ">
+        <h2 class="hamberger"><i class="fa-solid fa-bars"></i></h2>
         <h1 class="header--name">کافه گیلاس</h1>
-        <li class="header--ul--li"><a href="cafegilas.html" class="header--button">صفحه اصلی</a></li>
-        <li class="header--ul--li"><a href="about.html" class="header--button">قهوه ها</a></li>
+
+        <li class="header--ul--li"><a href="index.html" class="header--button">صفحه اصلی</a></li>
+        <li class="header--ul--li"><a href="about.html" class="header--button"> درباره ما</a></li>
         <li class="header--ul--li"><a href="contact.html" class="header--button">ماگ ها </a></li>
       </ul>
     </nav>
@@ -40,7 +43,7 @@
 
   </section>
   <h2 class="text">the most dreamly cafe in tehran</h2>
-<i class="fa far fas fa-chevron-down chevron"></i>
+  <i class="fa far fas fa-chevron-down chevron"></i>
   <section class="about">
 
     <div class="about--div">
@@ -53,7 +56,8 @@
             میهمانی ستاره ها ببریم.</li>
           <li class="about--div--text--li">فضای مناسب برای دیدار های دوستانه ،قرارهای کاری و لحظات خاطره انگیز برای تمام
             فصول سال با تهویه مناسب و نور کافی ، فضایی برای تمام سلیقه ها</li>
-          <li class="about--div--text--li">لحضات زیبای خود را با ما در کافه گیلاس تجربه کنید و به دوستان نیز کافه گیلاس را
+          <li class="about--div--text--li">لحضات زیبای خود را با ما در کافه گیلاس تجربه کنید و به دوستان نیز کافه گیلاس
+            را
             پیشنهاد دهید.</li>
           <li class="about--div--text--li">ما در کافه گیلاس با استفاده از بهترین و تازه ترین مواد اولیه و کادری مجرب
             همه روزه در خدمت مشتریان عزیز هستیم .</li>
@@ -67,13 +71,13 @@
 
 
     </div>
-    <div class="about--div">
+    <div class="about--div axchef">
 
 
-<img src="./images/chef-1.jpg" alt="" >
+      <img src="./images/chef-1.jpg" alt="">
 
 
-  
+
 
     </div>
 
@@ -87,26 +91,24 @@
 
   </section>
   <section class="instagram">
-  <h2 class="instagram--page">
-    
-    <i class="fa-brands fa-instagram"></i>
-   
-  </h2>
-  <h2 class="instagram--name">cafe.gilas</h2>
-</section>
-<sectin class="foods">
+    <h2 class="instagram--page">
 
-<img src="./images/main/1.jpg" alt="" class="food--img">
-<img src="./images/main/2.jpg" alt="" class="food--img">
-<img src="./images/main/3.jpg" alt="" class="food--img">
-<img src="./images/main/4.jpg" alt="" class="food--img">
-<img src="./images/main/5.jpg" alt="" class="food--img">
-<img src="./images/main/6.jpg" alt="" class="food--img">
-<img src="./images/main/7.jpg" alt="" class="food--img">
-<img src="./images/main/8.jpg" alt="" class="food--img">
-<img src="./images/main/9.jpg" alt="" class="food--img">
+      <i class="fa-brands fa-instagram"></i>
 
+    </h2>
+    <h2 class="instagram--name">cafe.gilas</h2>
+  </section>
+  <sectin class="foods">
 
+    <img src="./images/main/1.jpg" alt="" class="food--img">
+    <img src="./images/main/2.jpg" alt="" class="food--img">
+    <img src="./images/main/3.jpg" alt="" class="food--img">
+    <img src="./images/main/4.jpg" alt="" class="food--img">
+    <img src="./images/main/5.jpg" alt="" class="food--img">
+    <img src="./images/main/6.jpg" alt="" class="food--img">
+    <img src="./images/main/7.jpg" alt="" class="food--img">
+    <img src="./images/main/8.jpg" alt="" class="food--img">
+    <img src="./images/main/9.jpg" alt="" class="food--img">
 
 
 
@@ -115,8 +117,23 @@
 
 
 
-</sectin>
 
+
+  </sectin>
+
+  <footer>
+    <img src="./images/logo/photo_2024-09-24_20-55-36.jpg" alt="" class="footer--logo">
+    <h2 class="footer--tamas"> تماس با ما : 09050597341</h2>
+    <h2 class="footer--tamas">آدرس:تهران اسلامشهر سر خیابان علی ابن ابی طالب</h2>
+    <div class="footer--ertebatat">
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-telegram"></i>
+
+    </div>
+
+
+
+  </footer>
 </body>
 
 </html>
