add gallery and coffee

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
         <li class="header--ul--li"><a href="index.html" class="header--button">صفحه اصلی</a></li>
         <li class="header--ul--li"><a href="about.html" class="header--button"> درباره ما</a></li>
-        <li class="header--ul--li"><a href="contact.html" class="header--button">ماگ ها </a></li>
+        <li class="header--ul--li"><a href="gallery.html" class="header--button">گالری تصاویر  </a></li>
+        <li class="header--ul--li"><a href="ghahve.html" class="header--button"> قهوه ها  </a></li>
+
       </ul>
     </nav>
     <div class="header--logo">
