--- a/gallery.html
+++ b/gallery.html
@@ -16,22 +16,24 @@
 
     <header>
         <nav>
-            <ul class="header--ul ">
-                <h2 class="hamberger"><i class="fa-solid fa-bars"></i></h2>
-                <h1 class="header--name">کافه گیلاس</h1>
-
-                <li class="header--ul--li"><a href="index.html" class="header--button">صفحه اصلی</a></li>
-                <li class="header--ul--li"><a href="about.html" class="header--button"> درباره ما</a></li>
-                <li class="header--ul--li"><a href="gallery.html" class="header--button">گالری تصاویر </a></li>
-                <li class="header--ul--li"><a href="ghahve.html" class="header--button">قهوه ها    </a>
-            </ul>
+          <ul class="header--ul ">
+            <h2 class="hamberger"><i class="fa-solid fa-bars"></i></h2>
+            <h1 class="header--name">کافه گیلاس</h1>
+    
+            <li class="header--ul--li"><a href="index.html" class="header--button">صفحه اصلی</a></li>
+            <li class="header--ul--li"><a href="about.html" class="header--button"> درباره ما</a></li>
+            <li class="header--ul--li"><a href="gallery.html" class="header--button">گالری تصاویر  </a></li>
+            <li class="header--ul--li"><a href="ghahve.html" class="header--button"> قهوه ها  </a></li>
+            <li class="header--ul--li"><a href="Mocktail.html" class="header--button"> ماکتل ها   </a></li>
+    
+          </ul>
         </nav>
         <div class="header--logo">
-            <a href="index.html">
-                <img src="./images/logo/photo_2024-09-24_20-55-36.jpg" alt="لوگو سایت" class="header--logo">
-            </a>
+          <a href="index.html">
+            <img src="./images/logo/photo_2024-09-24_20-55-36.jpg" alt="لوگو سایت" class="header--logo">
+          </a>
         </div>
-    </header>
+      </header>
 
     <sectin class="tasavir">
 
