--- a/Mocktail.html
+++ b/Mocktail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fa-ir" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,72 +9,91 @@
     <link rel="stylesheet" href="./mobile.css">
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <header>
         <nav>
-          <ul class="header--ul ">
-            <h2 class="hamberger"><i class="fa-solid fa-bars"></i></h2>
-            <h1 class="header--name">کافه گیلاس</h1>
-    
-            <li class="header--ul--li"><a href="index.html" class="header--button">صفحه اصلی</a></li>
-            <li class="header--ul--li"><a href="about.html" class="header--button"> درباره ما</a></li>
-            <li class="header--ul--li"><a href="gallery.html" class="header--button">گالری تصاویر  </a></li>
-            <li class="header--ul--li"><a href="ghahve.html" class="header--button"> قهوه ها  </a></li>
-            <li class="header--ul--li"><a href="Mocktail.html" class="header--button"> ماکتل ها   </a></li>
-    
-          </ul>
+            <ul class="header--ul ">
+                <h2 class="hamberger"><i class="fa-solid fa-bars"></i></h2>
+                <h1 class="header--name">کافه گیلاس</h1>
+
+                <li class="header--ul--li"><a href="index.html" class="header--button">صفحه اصلی</a></li>
+                <li class="header--ul--li"><a href="about.html" class="header--button"> درباره ما</a></li>
+                <li class="header--ul--li"><a href="gallery.html" class="header--button">گالری تصاویر </a></li>
+                <li class="header--ul--li"><a href="ghahve.html" class="header--button"> قهوه ها </a></li>
+                <li class="header--ul--li"><a href="Mocktail.html" class="header--button"> ماکتل ها </a></li>
+                <li class="header--ul--li"><a href="chai.html" class="header--button"> چای و دمنوش </a></li>
+
+            </ul>
         </nav>
         <div class="header--logo">
-          <a href="index.html">
-            <img src="./images/logo/photo_2024-09-24_20-55-36.jpg" alt="لوگو سایت" class="header--logo">
-          </a>
+            <a href="index.html">
+                <img src="./images/logo/photo_2024-09-24_20-55-36.jpg" alt="لوگو سایت" class="header--logo">
+            </a>
         </div>
-      </header>
-      <section class="cards">
-      <div class="cards--div">
-        <img src="./images/moktail/roya.jpg " alt="esperso" class="cards--div--img">
-        <h2 class="cards--div--name">  رویای رز سیاه / Black Rose Dream
-        </h2>
-        <p class="cards--div--price">110000تومان</p>
-        <a href="#" class="cards--div--a">ثبت سفارش</a>
+    </header>
+    <section class="cards">
+        <div class="cards--div">
+            <img src="./images/moktail/roya.jpg " alt="Black Rose Dream" class="cards--div--img">
+            <h2 class="cards--div--name"> رویای رز سیاه / Black Rose Dream
+            </h2>
+            <p class="cards--div--price">110000تومان</p>
+            <a href="#" class="cards--div--a">ثبت سفارش</a>
 
-    </div>
-    <div class="cards--div">
-        <img src="./images/moktail/black.jpg" alt="esperso" class="cards--div--img">
-        <h2 class="cards--div--name">بلک لایت/ Black Light
-        </h2>
-        <p class="cards--div--price">110000تومان</p>
-        <a href="#" class="cards--div--a">ثبت سفارش</a>
+        </div>
+        <div class="cards--div">
+            <img src="./images/moktail/black.jpg" alt="Black Light" class="cards--div--img">
+            <h2 class="cards--div--name">بلک لایت/ Black Light
+            </h2>
+            <p class="cards--div--price">110000تومان</p>
+            <a href="#" class="cards--div--a">ثبت سفارش</a>
 
-    </div>
-    <div class="cards--div">
-        <img src="./images/ghahve/esperso.jpg" alt="esperso" class="cards--div--img">
-        <h2 class="cards--div--name">اسپرسو - ریسترتو / Espresso</h2>
-        <p class="cards--div--price">55000تومان</p>
-        <a href="#" class="cards--div--a">ثبت سفارش</a>
+        </div>
+        <div class="cards--div">
+            <img src="./images/moktail/panch.jpg" alt="Punch" class="cards--div--img">
+            <h2 class="cards--div--name"> پانچ/ Punch
+            </h2>
+            <p class="cards--div--price">110000تومان</p>
+            <a href="#" class="cards--div--a">ثبت سفارش</a>
 
-    </div>
-    <div class="cards--div">
-        <img src="./images/ghahve/esperso.jpg" alt="esperso" class="cards--div--img">
-        <h2 class="cards--div--name">اسپرسو - ریسترتو / Espresso</h2>
-        <p class="cards--div--price">55000تومان</p>
-        <a href="#" class="cards--div--a">ثبت سفارش</a>
+        </div>
+        <div class="cards--div">
+            <img src="./images/moktail/pink.jpg" alt="Hawaiian pink mock" class="cards--div--img">
+            <h2 class="cards--div--name">پینک هاوایی/ Hawaiian pink mock </h2>
+            <p class="cards--div--price">110000تومان</p>
+            <a href="#" class="cards--div--a">ثبت سفارش</a>
 
-    </div>
-    <div class="cards--div">
-        <img src="./images/ghahve/esperso.jpg" alt="esperso" class="cards--div--img">
-        <h2 class="cards--div--name">اسپرسو - ریسترتو / Espresso</h2>
-        <p class="cards--div--price">55000تومان</p>
-        <a href="#" class="cards--div--a">ثبت سفارش</a>
+        </div>
+        <div class="cards--div">
+            <img src="./images/moktail/paradice.jpg" alt="paradis mocktail" class="cards--div--img">
+            <h2 class="cards--div--name">پارادایس/ paradis mocktail
+            </h2>
+            <p class="cards--div--price">110000تومان</p>
+            <a href="#" class="cards--div--a">ثبت سفارش</a>
 
-    </div>
-    <div class="cards--div">
-        <img src="./images/ghahve/esperso.jpg" alt="esperso" class="cards--div--img">
-        <h2 class="cards--div--name">اسپرسو - ریسترتو / Espresso</h2>
-        <p class="cards--div--price">55000تومان</p>
-        <a href="#" class="cards--div--a">ثبت سفارش</a>
+        </div>
+        <div class="cards--div">
+            <img src="./images/moktail/mango.jpg" alt="mango berry mocktail" class="cards--div--img">
+            <h2 class="cards--div--name">منگو بری/ mango berry mocktail
+            </h2>
+            <p class="cards--div--price">110000تومان</p>
+            <a href="#" class="cards--div--a">ثبت سفارش</a>
 
-    </div>
-</section>
+        </div>
+    </section>
+    <footer>
+        <img src="./images/logo/photo_2024-09-24_20-55-36.jpg" alt="" class="footer--logo">
+        <h2 class="footer--tamas"> تماس با ما : 09050597341</h2>
+        <h2 class="footer--tamas">آدرس:تهران اسلامشهر سر خیابان علی ابن ابی طالب</h2>
+        <div class="footer--ertebatat">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-telegram"></i>
+
+        </div>
+
+
+
+    </footer>
 </body>
+
 </html>
