--- a/chai.html
+++ b/chai.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fa-ir" dir="rtl">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>coffee</title>
+    <title>Tea & herbal
+
+    </title>
     <link rel="stylesheet" href="./fontawesome-free-6.6.0-web/css/all.css">
     <link rel="stylesheet" href="./mobile.css">
     <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
     <header>
         <nav>
@@ -33,76 +33,67 @@
         </div>
       </header>
 
-
-    <section class="cards">
+      <section class="cards">
         <div class="cards--div">
-            <img src="./images/ghahve/esperso.jpg" alt="esperso" class="cards--div--img">
-            <h2 class="cards--div--name">اسپرسو - ریسترتو / Espresso</h2>
-            <p class="cards--div--price">55000تومان</p>
+            <img src="./images/tea/tea.jpg " alt="chai nabat" class="cards--div--img">
+            <h2 class="cards--div--name">لیوان چای(همراه نبات)
+
+            </h2>
+            <p class="cards--div--price">50000تومان</p>
             <a href="#" class="cards--div--a">ثبت سفارش</a>
 
         </div>
         <div class="cards--div">
-            <img src="./images/ghahve/dopio.jpg" alt="dopio" class="cards--div--img">
-            <h2 class="cards--div--name">دوپیو / Dopiyo</h2>
-            <p class="cards--div--price">60000تومان</p>
-            <a href="#" class="cards--div--a">ثبت سفارش</a>
-        </div>
-        <div class="cards--div">
-            <img src="./images/ghahve/afogato.jpg" alt="afogato" class="cards--div--img">
-            <h2 class="cards--div--name">آفوگاتو / Affogato</h2>
+            <img src="./images/tea/torsh.jpg" alt="chai torsh" class="cards--div--img">
+            <h2 class="cards--div--name"> دمنوش چای ترش
+
+            </h2>
             <p class="cards--div--price">70000تومان</p>
             <a href="#" class="cards--div--a">ثبت سفارش</a>
+
         </div>
         <div class="cards--div">
-            <img src="./images/ghahve/rance.jpg" alt="france" class="cards--div--img">
-            <h2 class="cards--div--name">فرانسه / French coffee</h2>
-            <p class="cards--div--price">80000تومان</p>
-            <a href="#" class="cards--div--a">ثبت سفارش</a>
-        </div>
-        <div class="cards--div">
-            <img src="./images/ghahve/americano.jpg" alt="americano" class="cards--div--img">
-            <h2 class="cards--div--name">آمریکانو / Americano</h2>
-            <p class="cards--div--price">75000تومان</p>
-            <a href="#" class="cards--div--a">ثبت سفارش</a>
-        </div>
-        <div class="cards--div">
-            <img src="./images/ghahve/moka.jpg" alt="moka" class="cards--div--img">
-            <h2 class="cards--div--name">موکا / Mocha</h2>
-            <p class="cards--div--price">80000تومان</p>
-            <a href="#" class="cards--div--a">ثبت سفارش</a>
-        </div>
-        <div class="cards--div">
-            <img src="./images/ghahve/aramel.webp" alt="karamel makiato" class="cards--div--img">
-            <h2 class="cards--div--name">کارامل ماکیاتو / Caramel macchiato
+            <img src="./images/tea/sabz.jpg" alt="sabz" class="cards--div--img">
+            <h2 class="cards--div--name">دمنوش سبز
+
             </h2>
-            <p class="cards--div--price">80000تومان</p>
+            <p class="cards--div--price">70000تومان</p>
             <a href="#" class="cards--div--a">ثبت سفارش</a>
-        </div>
-        <div class="cards--div">
-
-            <img src="./images/ghahve/appoccino.jpg" alt="Cappuccino" class="cards--div--img">
-            <h2 class="cards--div--name">کاپوچینو / Cappuccino</h2>
-            <p class="cards--div--price">75000تومان</p>
-            <a href="#" class="cards--div--a">ثبت سفارش</a>
-
 
         </div>
         <div class="cards--div">
-            <img src="./images/ghahve/late.webp" alt="late" class="cards--div--img">
-            <h2 class="cards--div--name">لاته / Latte</h2>
-            <p class="cards--div--price">80000تومان</p>
+            <img src="./images/tea/bahar.jpg" alt="bahar narenj" class="cards--div--img">
+            <h2 class="cards--div--name">دمنوش بهار نارنج
+            </h2>
+            <p class="cards--div--price">70000تومان</p>
             <a href="#" class="cards--div--a">ثبت سفارش</a>
 
         </div>
+        <div class="cards--div">
+            <img src="./images/tea/limo.jpg" alt=" beh limo" class="cards--div--img">
+            <h2 class="cards--div--name">دمنوش به لیمو
 
+            </h2>
+            <p class="cards--div--price">70000تومان</p>
+            <a href="#" class="cards--div--a">ثبت سفارش</a>
 
+        </div>
+        <div class="cards--div">
+            <img src="./images/tea/aram.jpg" alt="aram bakhsh" class="cards--div--img">
+            <h2 class="cards--div--name">دمنوش آرام بخش
 
+            </h2>
+            <p class="cards--div--price">70000تومان</p>
+            <a href="#" class="cards--div--a">ثبت سفارش</a>
 
-
-
+        </div>
     </section>
-    <footer>
+
+
+
+
+
+      <footer>
         <img src="./images/logo/photo_2024-09-24_20-55-36.jpg" alt="" class="footer--logo">
         <h2 class="footer--tamas"> تماس با ما : 09050597341</h2>
         <h2 class="footer--tamas">آدرس:تهران اسلامشهر سر خیابان علی ابن ابی طالب</h2>
@@ -117,5 +108,4 @@
       </footer>
 
 </body>
-
 </html>
