--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li class="header--ul--li"><a href="gallery.html" class="header--button">گالری تصاویر  </a></li>
         <li class="header--ul--li"><a href="ghahve.html" class="header--button"> قهوه ها  </a></li>
         <li class="header--ul--li"><a href="Mocktail.html" class="header--button"> ماکتل ها   </a></li>
+        <li class="header--ul--li"><a href="chai.html" class="header--button"> چای و دمنوش    </a></li>
 
       </ul>
     </nav>
